fix(#3): change latter-spacing for contacts items

--- a/src/components/sections/contacts/contacts.module.css
+++ b/src/components/sections/contacts/contacts.module.css
@@ -100,6 +100,7 @@
   border: 1px solid var(--gray);
   overflow: hidden;
   transition-duration: .3s;
+  letter-spacing: -0.9px;
 }
 
 .contacts_item:hover {
